add /api/LocationTypes back
